paper edits to highlight reporting functionality and to add a deeper comparison of other similar platforms

--- a/paper/paper.bib
+++ b/paper/paper.bib
@@ -7,7 +7,6 @@
   url = {https://github.com/anvil-works/anvil-runtime}
 }
 
-
 @misc{docassemble,
   author = {{Pyle}, J.},
   title = {docassemble},
@@ -16,3 +15,42 @@
   journal = {GitHub repository},
   url = {https://github.com/jhpyle/docassemble}
 }
+
+@Manual{lime,
+ title        = {LimeSurvey: An Open Source survey tool},
+ author       = {{LimeSurvey Project Team / Carsten Schmitz}},
+ organization = {LimeSurvey Project},
+ address      = {Hamburg, Germany},
+ year         = 2012,
+ url          = {http://www.limesurvey.org}
+}
+
+@article{harris2009research,
+  title={Research electronic data capture (REDCap)—a metadata-driven methodology and workflow process for providing translational research informatics support},
+  author={Harris, Paul A and Taylor, Robert and Thielke, Robert and Payne, Jonathon and Gonzalez, Nathaniel and Conde, Jose G},
+  journal={Journal of biomedical informatics},
+  volume={42},
+  number={2},
+  pages={377--381},
+  year={2009},
+  publisher={Elsevier}
+}
+
+@ARTICLE{vegalite,
+  author={A. {Satyanarayan} and D. {Moritz} and K. {Wongsuphasawat} and J. {Heer}},
+  journal={IEEE Transactions on Visualization and Computer Graphics},
+  title={Vega-Lite: A Grammar of Interactive Graphics},
+  year={2017},
+  volume={23},
+  number={1},
+  pages={341-350},
+  doi={10.1109/TVCG.2016.2599030}}
+
+@conference{Kluyver:2016aa,
+	Author = {Thomas Kluyver and Benjamin Ragan-Kelley and Fernando P{\'e}rez and Brian Granger and Matthias Bussonnier and Jonathan Frederic and Kyle Kelley and Jessica Hamrick and Jason Grout and Sylvain Corlay and Paul Ivanov and Dami{\'a}n Avila and Safia Abdalla and Carol Willing},
+	Booktitle = {Positioning and Power in Academic Publishing: Players, Agents and Agendas},
+	Editor = {F. Loizides and B. Schmidt},
+	Organization = {IOS Press},
+	Pages = {87 - 90},
+	Title = {Jupyter Notebooks -- a publishing format for reproducible computational workflows},
+	Year = {2016}}
